// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for Navigation components Case 1: Home page snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="home-container"
      >
        <div
          class="home-content"
        >
          <h1
            class="home-title"
          >
            The History of Calculators
          </h1>
          <p
            class="paragraph"
          >
            The abacus, with movable beads on rods, marks the earliest known calculator, used across ancient civilizations for basic arithmetic and calculations.
          </p>
          <p
            class="paragraph"
          >
            Blaise Pascal invents the Pascaline, a mechanical calculator that uses gears and wheels to perform addition and subtraction with reliability.
          </p>
          <p
            class="paragraph"
          >
            Gottfried Wilhelm Leibniz designs the stepped drum calculator, advancing mechanical computation with capabilities for multiplication and division.
          </p>
          <p
            class="paragraph"
          >
            Charles Babbage conceives the Analytical Engine, a mechanical marvel with memory serving as a precursor to modern computers.
          </p>
          <p
            class="paragraph"
          >
            The Curta Calculator, a handheld mechanical wonder by Curt Herzstark, simplifies complex arithmetic and earns popularity for its portability.
          </p>
          <p
            class="paragraph"
          >
            Electronic calculators emerge, utilizing transistors and integrated circuits to enable and more precise arithmetic calculations.
          </p>
        </div>
        <div
          class="number sky-blue"
          style="left: 772.0223209394703px; top: 467.0267311688086px;"
        >
          1
        </div>
        <div
          class="number orange"
          style="left: 16.781047965313746px; top: 446.68341168716887px;"
        >
          2
        </div>
        <div
          class="number sky-blue"
          style="left: 800.9452333324068px; top: 649.2737761092596px;"
        >
          3
        </div>
        <div
          class="number orange"
          style="left: 64.08816183415092px; top: 54.47585682575519px;"
        >
          4
        </div>
        <div
          class="number sky-blue"
          style="left: 733.3979053143594px; top: 514.6243257280263px;"
        >
          5
        </div>
        <div
          class="number orange"
          style="left: 512.6958734601667px; top: 309.1779725267148px;"
        >
          6
        </div>
        <div
          class="number sky-blue"
          style="left: 229.13584632273387px; top: 212.6010701230067px;"
        >
          7
        </div>
        <div
          class="number orange"
          style="left: 586.8548072511282px; top: 108.96239351722369px;"
        >
          8
        </div>
        <div
          class="number sky-blue"
          style="left: 330.2494930754965px; top: 336.0836977528253px;"
        >
          9
        </div>
        <div
          class="number orange"
          style="left: 304.2893611846391px; top: 295.4840246406684px;"
        >
          10
        </div>
        <div
          class="number sky-blue"
          style="left: 176.12368673160745px; top: 579.9775917419871px;"
        >
          11
        </div>
        <div
          class="number orange"
          style="left: 595.9364622519674px; top: 260.20419417515734px;"
        >
          12
        </div>
        <div
          class="number sky-blue"
          style="left: 795.4763196818885px; top: 66.15031369941494px;"
        >
          13
        </div>
        <div
          class="number orange"
          style="left: 93.5186580343825px; top: 318.9518912870791px;"
        >
          14
        </div>
        <div
          class="number sky-blue"
          style="left: 318.99514697611266px; top: 152.44520629629582px;"
        >
          15
        </div>
        <div
          class="number orange"
          style="left: 458.030405887868px; top: 145.24255401593297px;"
        >
          16
        </div>
        <div
          class="number sky-blue"
          style="left: 570.6937076493562px; top: 639.7203442362585px;"
        >
          17
        </div>
        <div
          class="number orange"
          style="left: 801.602979528599px; top: 336.2889760077291px;"
        >
          18
        </div>
        <div
          class="number sky-blue"
          style="left: 379.02587686205925px; top: 508.9008750911306px;"
        >
          19
        </div>
        <div
          class="number orange"
          style="left: 669.511759104292px; top: 632.381561364149px;"
        >
          20
        </div>
        <div
          class="number sky-blue"
          style="left: 731.5184074532172px; top: 719.3952389268575px;"
        >
          21
        </div>
        <div
          class="number orange"
          style="left: 470.46694638388703px; top: 729.4341217031076px;"
        >
          22
        </div>
        <div
          class="number sky-blue"
          style="left: 931.712572034186px; top: 88.28016292570902px;"
        >
          23
        </div>
        <div
          class="number orange"
          style="left: 657.638838622767px; top: 201.3963470594123px;"
        >
          24
        </div>
        <div
          class="number sky-blue"
          style="left: 714.6458958944006px; top: 488.3261924074769px;"
        >
          25
        </div>
        <div
          class="number orange"
          style="left: 54.80750774545572px; top: 508.0296370682549px;"
        >
          26
        </div>
        <div
          class="number sky-blue"
          style="left: 750.2303593461013px; top: 211.97705454647965px;"
        >
          27
        </div>
        <div
          class="number orange"
          style="left: 29.658876366165032px; top: 281.99967098653286px;"
        >
          28
        </div>
        <div
          class="number sky-blue"
          style="left: 27.346478123833776px; top: 667.7301471308932px;"
        >
          29
        </div>
        <div
          class="number orange"
          style="left: 479.4496568923955px; top: 323.5235906759076px;"
        >
          30
        </div>
        <div
          class="number sky-blue"
          style="left: 156.870022172046px; top: 622.2628057896269px;"
        >
          31
        </div>
        <div
          class="number orange"
          style="left: 788.2995113789059px; top: 669.3081560872482px;"
        >
          32
        </div>
        <div
          class="number sky-blue"
          style="left: 162.57092565046628px; top: 357.74323478093953px;"
        >
          33
        </div>
        <div
          class="number orange"
          style="left: 909.6963800418657px; top: 295.52458944557225px;"
        >
          34
        </div>
        <div
          class="number sky-blue"
          style="left: 172.70063291630208px; top: 351.5433455400465px;"
        >
          35
        </div>
        <div
          class="number orange"
          style="left: 562.8473916696555px; top: 96.34933686405591px;"
        >
          36
        </div>
        <div
          class="number sky-blue"
          style="left: 126.12884857200834px; top: 202.0587101976964px;"
        >
          37
        </div>
        <div
          class="number orange"
          style="left: 898.3907186012548px; top: 207.67226052538302px;"
        >
          38
        </div>
        <div
          class="number sky-blue"
          style="left: 325.9750425967916px; top: 233.2577652955959px;"
        >
          39
        </div>
        <div
          class="number orange"
          style="left: 633.366276621975px; top: 60.97017086350343px;"
        >
          40
        </div>
        <div
          class="number sky-blue"
          style="left: 571.4030874211758px; top: 590.1279328885272px;"
        >
          41
        </div>
        <div
          class="number orange"
          style="left: 528.3864449649843px; top: 394.7537924052527px;"
        >
          42
        </div>
        <div
          class="number sky-blue"
          style="left: 245.46169852473463px; top: 270.62425177810644px;"
        >
          43
        </div>
        <div
          class="number orange"
          style="left: 845.6984532156944px; top: 159.57379508248366px;"
        >
          44
        </div>
        <div
          class="number sky-blue"
          style="left: 138.7493717028549px; top: 83.6343465139125px;"
        >
          45
        </div>
        <div
          class="number orange"
          style="left: 386.104284926869px; top: 387.9680428827061px;"
        >
          46
        </div>
        <div
          class="number sky-blue"
          style="left: 921.8825715994112px; top: 488.10516835672763px;"
        >
          47
        </div>
        <div
          class="number orange"
          style="left: 9.530670803016392px; top: 149.3316119531501px;"
        >
          48
        </div>
        <div
          class="number sky-blue"
          style="left: 110.02810583216456px; top: 236.04389660645353px;"
        >
          49
        </div>
        <div
          class="number orange"
          style="left: 198.47795769251002px; top: 452.80882915361275px;"
        >
          50
        </div>
        <div
          class="number sky-blue"
          style="left: 816.4580563198194px; top: 681.7307114484933px;"
        >
          51
        </div>
        <div
          class="number orange"
          style="left: 239.13221494829645px; top: 432.3008710546246px;"
        >
          52
        </div>
        <div
          class="number sky-blue"
          style="left: 541.6471157074952px; top: 694.1579110500029px;"
        >
          53
        </div>
        <div
          class="number orange"
          style="left: 555.1550275041602px; top: 309.96130839060885px;"
        >
          54
        </div>
        <div
          class="number sky-blue"
          style="left: 1.562611572828473px; top: 581.6126812358682px;"
        >
          55
        </div>
        <div
          class="number orange"
          style="left: 547.3135144083058px; top: 100.98093438223711px;"
        >
          56
        </div>
        <div
          class="number sky-blue"
          style="left: 778.4424284160198px; top: 251.36571453545122px;"
        >
          57
        </div>
        <div
          class="number orange"
          style="left: 50.056215052268044px; top: 388.3547191889154px;"
        >
          58
        </div>
        <div
          class="number sky-blue"
          style="left: 542.2662407314699px; top: 366.2243056895335px;"
        >
          59
        </div>
        <div
          class="number orange"
          style="left: 523.4983508115097px; top: 324.00624220520234px;"
        >
          60
        </div>
        <div
          class="number sky-blue"
          style="left: 208.20762555217743px; top: 91.30260717126251px;"
        >
          61
        </div>
        <div
          class="number orange"
          style="left: 876.5169665699063px; top: 567.1662147601486px;"
        >
          62
        </div>
        <div
          class="number sky-blue"
          style="left: 478.69866089743914px; top: 505.37875433667904px;"
        >
          63
        </div>
        <div
          class="number orange"
          style="left: 725.49031432825px; top: 630.5111448925562px;"
        >
          64
        </div>
        <div
          class="number sky-blue"
          style="left: 876.3459111526352px; top: 235.50310500871603px;"
        >
          65
        </div>
        <div
          class="number orange"
          style="left: 810.5340986432204px; top: 316.84996810420137px;"
        >
          66
        </div>
        <div
          class="number sky-blue"
          style="left: 290.89049137438315px; top: 313.314324327073px;"
        >
          67
        </div>
        <div
          class="number orange"
          style="left: 569.8496867439105px; top: 475.06037555905107px;"
        >
          68
        </div>
        <div
          class="number sky-blue"
          style="left: 477.2953306791626px; top: 295.83116903492873px;"
        >
          69
        </div>
        <div
          class="number orange"
          style="left: 973.7201968004129px; top: 168.72146533523707px;"
        >
          70
        </div>
        <div
          class="number sky-blue"
          style="left: 384.33590530056927px; top: 608.4932030190943px;"
        >
          71
        </div>
        <div
          class="number orange"
          style="left: 657.2191265705669px; top: 662.8091936486372px;"
        >
          72
        </div>
        <div
          class="number sky-blue"
          style="left: 848.025706439026px; top: 585.5157944112888px;"
        >
          73
        </div>
        <div
          class="number orange"
          style="left: 175.29751143405292px; top: 235.4263409565364px;"
        >
          74
        </div>
        <div
          class="number sky-blue"
          style="left: 930.7648338478323px; top: 703.1244405938605px;"
        >
          75
        </div>
        <div
          class="number orange"
          style="left: 332.9310681301954px; top: 671.0418314097461px;"
        >
          76
        </div>
        <div
          class="number sky-blue"
          style="left: 457.64084261605376px; top: 384.08711919870984px;"
        >
          77
        </div>
        <div
          class="number orange"
          style="left: 591.3903348224496px; top: 512.5586337154565px;"
        >
          78
        </div>
        <div
          class="number sky-blue"
          style="left: 481.68936439999266px; top: 200.36459640089632px;"
        >
          79
        </div>
        <div
          class="number orange"
          style="left: 424.83522457453637px; top: 126.77191294555716px;"
        >
          80
        </div>
        <div
          class="number sky-blue"
          style="left: 763.6924799113183px; top: 549.481006223284px;"
        >
          81
        </div>
        <div
          class="number orange"
          style="left: 377.92228534998344px; top: 685.1447121875989px;"
        >
          82
        </div>
        <div
          class="number sky-blue"
          style="left: 292.09460126573276px; top: 179.2534325689941px;"
        >
          83
        </div>
        <div
          class="number orange"
          style="left: 271.93984607334505px; top: 645.1406322985159px;"
        >
          84
        </div>
        <div
          class="number sky-blue"
          style="left: 234.18379497907927px; top: 591.2075802817826px;"
        >
          85
        </div>
        <div
          class="number orange"
          style="left: 576.9478005411299px; top: 510.88478713638784px;"
        >
          86
        </div>
        <div
          class="number sky-blue"
          style="left: 504.8254717370528px; top: 180.53333655140975px;"
        >
          87
        </div>
        <div
          class="number orange"
          style="left: 146.34245765373043px; top: 573.0839821604131px;"
        >
          88
        </div>
        <div
          class="number sky-blue"
          style="left: 563.0436308733747px; top: 588.0990806421926px;"
        >
          89
        </div>
        <div
          class="number orange"
          style="left: 560.2281239504168px; top: 255.41344292650416px;"
        >
          90
        </div>
        <div
          class="number sky-blue"
          style="left: 679.695485591443px; top: 101.24762089160973px;"
        >
          91
        </div>
        <div
          class="number orange"
          style="left: 41.27291380085558px; top: 411.06847128137986px;"
        >
          92
        </div>
        <div
          class="number sky-blue"
          style="left: 677.7800502269927px; top: 431.6374412745766px;"
        >
          93
        </div>
        <div
          class="number orange"
          style="left: 890.0349004596233px; top: 202.79363515183633px;"
        >
          94
        </div>
        <div
          class="number sky-blue"
          style="left: 614.3146346639787px; top: 572.0548028294111px;"
        >
          95
        </div>
        <div
          class="number orange"
          style="left: 228.05667715021264px; top: 362.78826515703395px;"
        >
          96
        </div>
        <div
          class="number sky-blue"
          style="left: 1004.0760139919255px; top: 510.7836163628882px;"
        >
          97
        </div>
        <div
          class="number orange"
          style="left: 150.77654410873015px; top: 135.4469116233397px;"
        >
          98
        </div>
        <div
          class="number sky-blue"
          style="left: 1021.1121789692097px; top: 670.4393329302438px;"
        >
          99
        </div>
        <div
          class="number orange"
          style="left: 820.6861394506257px; top: 499.8402795500924px;"
        >
          100
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="home-container"
    >
      <div
        class="home-content"
      >
        <h1
          class="home-title"
        >
          The History of Calculators
        </h1>
        <p
          class="paragraph"
        >
          The abacus, with movable beads on rods, marks the earliest known calculator, used across ancient civilizations for basic arithmetic and calculations.
        </p>
        <p
          class="paragraph"
        >
          Blaise Pascal invents the Pascaline, a mechanical calculator that uses gears and wheels to perform addition and subtraction with reliability.
        </p>
        <p
          class="paragraph"
        >
          Gottfried Wilhelm Leibniz designs the stepped drum calculator, advancing mechanical computation with capabilities for multiplication and division.
        </p>
        <p
          class="paragraph"
        >
          Charles Babbage conceives the Analytical Engine, a mechanical marvel with memory serving as a precursor to modern computers.
        </p>
        <p
          class="paragraph"
        >
          The Curta Calculator, a handheld mechanical wonder by Curt Herzstark, simplifies complex arithmetic and earns popularity for its portability.
        </p>
        <p
          class="paragraph"
        >
          Electronic calculators emerge, utilizing transistors and integrated circuits to enable and more precise arithmetic calculations.
        </p>
      </div>
      <div
        class="number sky-blue"
        style="left: 772.0223209394703px; top: 467.0267311688086px;"
      >
        1
      </div>
      <div
        class="number orange"
        style="left: 16.781047965313746px; top: 446.68341168716887px;"
      >
        2
      </div>
      <div
        class="number sky-blue"
        style="left: 800.9452333324068px; top: 649.2737761092596px;"
      >
        3
      </div>
      <div
        class="number orange"
        style="left: 64.08816183415092px; top: 54.47585682575519px;"
      >
        4
      </div>
      <div
        class="number sky-blue"
        style="left: 733.3979053143594px; top: 514.6243257280263px;"
      >
        5
      </div>
      <div
        class="number orange"
        style="left: 512.6958734601667px; top: 309.1779725267148px;"
      >
        6
      </div>
      <div
        class="number sky-blue"
        style="left: 229.13584632273387px; top: 212.6010701230067px;"
      >
        7
      </div>
      <div
        class="number orange"
        style="left: 586.8548072511282px; top: 108.96239351722369px;"
      >
        8
      </div>
      <div
        class="number sky-blue"
        style="left: 330.2494930754965px; top: 336.0836977528253px;"
      >
        9
      </div>
      <div
        class="number orange"
        style="left: 304.2893611846391px; top: 295.4840246406684px;"
      >
        10
      </div>
      <div
        class="number sky-blue"
        style="left: 176.12368673160745px; top: 579.9775917419871px;"
      >
        11
      </div>
      <div
        class="number orange"
        style="left: 595.9364622519674px; top: 260.20419417515734px;"
      >
        12
      </div>
      <div
        class="number sky-blue"
        style="left: 795.4763196818885px; top: 66.15031369941494px;"
      >
        13
      </div>
      <div
        class="number orange"
        style="left: 93.5186580343825px; top: 318.9518912870791px;"
      >
        14
      </div>
      <div
        class="number sky-blue"
        style="left: 318.99514697611266px; top: 152.44520629629582px;"
      >
        15
      </div>
      <div
        class="number orange"
        style="left: 458.030405887868px; top: 145.24255401593297px;"
      >
        16
      </div>
      <div
        class="number sky-blue"
        style="left: 570.6937076493562px; top: 639.7203442362585px;"
      >
        17
      </div>
      <div
        class="number orange"
        style="left: 801.602979528599px; top: 336.2889760077291px;"
      >
        18
      </div>
      <div
        class="number sky-blue"
        style="left: 379.02587686205925px; top: 508.9008750911306px;"
      >
        19
      </div>
      <div
        class="number orange"
        style="left: 669.511759104292px; top: 632.381561364149px;"
      >
        20
      </div>
      <div
        class="number sky-blue"
        style="left: 731.5184074532172px; top: 719.3952389268575px;"
      >
        21
      </div>
      <div
        class="number orange"
        style="left: 470.46694638388703px; top: 729.4341217031076px;"
      >
        22
      </div>
      <div
        class="number sky-blue"
        style="left: 931.712572034186px; top: 88.28016292570902px;"
      >
        23
      </div>
      <div
        class="number orange"
        style="left: 657.638838622767px; top: 201.3963470594123px;"
      >
        24
      </div>
      <div
        class="number sky-blue"
        style="left: 714.6458958944006px; top: 488.3261924074769px;"
      >
        25
      </div>
      <div
        class="number orange"
        style="left: 54.80750774545572px; top: 508.0296370682549px;"
      >
        26
      </div>
      <div
        class="number sky-blue"
        style="left: 750.2303593461013px; top: 211.97705454647965px;"
      >
        27
      </div>
      <div
        class="number orange"
        style="left: 29.658876366165032px; top: 281.99967098653286px;"
      >
        28
      </div>
      <div
        class="number sky-blue"
        style="left: 27.346478123833776px; top: 667.7301471308932px;"
      >
        29
      </div>
      <div
        class="number orange"
        style="left: 479.4496568923955px; top: 323.5235906759076px;"
      >
        30
      </div>
      <div
        class="number sky-blue"
        style="left: 156.870022172046px; top: 622.2628057896269px;"
      >
        31
      </div>
      <div
        class="number orange"
        style="left: 788.2995113789059px; top: 669.3081560872482px;"
      >
        32
      </div>
      <div
        class="number sky-blue"
        style="left: 162.57092565046628px; top: 357.74323478093953px;"
      >
        33
      </div>
      <div
        class="number orange"
        style="left: 909.6963800418657px; top: 295.52458944557225px;"
      >
        34
      </div>
      <div
        class="number sky-blue"
        style="left: 172.70063291630208px; top: 351.5433455400465px;"
      >
        35
      </div>
      <div
        class="number orange"
        style="left: 562.8473916696555px; top: 96.34933686405591px;"
      >
        36
      </div>
      <div
        class="number sky-blue"
        style="left: 126.12884857200834px; top: 202.0587101976964px;"
      >
        37
      </div>
      <div
        class="number orange"
        style="left: 898.3907186012548px; top: 207.67226052538302px;"
      >
        38
      </div>
      <div
        class="number sky-blue"
        style="left: 325.9750425967916px; top: 233.2577652955959px;"
      >
        39
      </div>
      <div
        class="number orange"
        style="left: 633.366276621975px; top: 60.97017086350343px;"
      >
        40
      </div>
      <div
        class="number sky-blue"
        style="left: 571.4030874211758px; top: 590.1279328885272px;"
      >
        41
      </div>
      <div
        class="number orange"
        style="left: 528.3864449649843px; top: 394.7537924052527px;"
      >
        42
      </div>
      <div
        class="number sky-blue"
        style="left: 245.46169852473463px; top: 270.62425177810644px;"
      >
        43
      </div>
      <div
        class="number orange"
        style="left: 845.6984532156944px; top: 159.57379508248366px;"
      >
        44
      </div>
      <div
        class="number sky-blue"
        style="left: 138.7493717028549px; top: 83.6343465139125px;"
      >
        45
      </div>
      <div
        class="number orange"
        style="left: 386.104284926869px; top: 387.9680428827061px;"
      >
        46
      </div>
      <div
        class="number sky-blue"
        style="left: 921.8825715994112px; top: 488.10516835672763px;"
      >
        47
      </div>
      <div
        class="number orange"
        style="left: 9.530670803016392px; top: 149.3316119531501px;"
      >
        48
      </div>
      <div
        class="number sky-blue"
        style="left: 110.02810583216456px; top: 236.04389660645353px;"
      >
        49
      </div>
      <div
        class="number orange"
        style="left: 198.47795769251002px; top: 452.80882915361275px;"
      >
        50
      </div>
      <div
        class="number sky-blue"
        style="left: 816.4580563198194px; top: 681.7307114484933px;"
      >
        51
      </div>
      <div
        class="number orange"
        style="left: 239.13221494829645px; top: 432.3008710546246px;"
      >
        52
      </div>
      <div
        class="number sky-blue"
        style="left: 541.6471157074952px; top: 694.1579110500029px;"
      >
        53
      </div>
      <div
        class="number orange"
        style="left: 555.1550275041602px; top: 309.96130839060885px;"
      >
        54
      </div>
      <div
        class="number sky-blue"
        style="left: 1.562611572828473px; top: 581.6126812358682px;"
      >
        55
      </div>
      <div
        class="number orange"
        style="left: 547.3135144083058px; top: 100.98093438223711px;"
      >
        56
      </div>
      <div
        class="number sky-blue"
        style="left: 778.4424284160198px; top: 251.36571453545122px;"
      >
        57
      </div>
      <div
        class="number orange"
        style="left: 50.056215052268044px; top: 388.3547191889154px;"
      >
        58
      </div>
      <div
        class="number sky-blue"
        style="left: 542.2662407314699px; top: 366.2243056895335px;"
      >
        59
      </div>
      <div
        class="number orange"
        style="left: 523.4983508115097px; top: 324.00624220520234px;"
      >
        60
      </div>
      <div
        class="number sky-blue"
        style="left: 208.20762555217743px; top: 91.30260717126251px;"
      >
        61
      </div>
      <div
        class="number orange"
        style="left: 876.5169665699063px; top: 567.1662147601486px;"
      >
        62
      </div>
      <div
        class="number sky-blue"
        style="left: 478.69866089743914px; top: 505.37875433667904px;"
      >
        63
      </div>
      <div
        class="number orange"
        style="left: 725.49031432825px; top: 630.5111448925562px;"
      >
        64
      </div>
      <div
        class="number sky-blue"
        style="left: 876.3459111526352px; top: 235.50310500871603px;"
      >
        65
      </div>
      <div
        class="number orange"
        style="left: 810.5340986432204px; top: 316.84996810420137px;"
      >
        66
      </div>
      <div
        class="number sky-blue"
        style="left: 290.89049137438315px; top: 313.314324327073px;"
      >
        67
      </div>
      <div
        class="number orange"
        style="left: 569.8496867439105px; top: 475.06037555905107px;"
      >
        68
      </div>
      <div
        class="number sky-blue"
        style="left: 477.2953306791626px; top: 295.83116903492873px;"
      >
        69
      </div>
      <div
        class="number orange"
        style="left: 973.7201968004129px; top: 168.72146533523707px;"
      >
        70
      </div>
      <div
        class="number sky-blue"
        style="left: 384.33590530056927px; top: 608.4932030190943px;"
      >
        71
      </div>
      <div
        class="number orange"
        style="left: 657.2191265705669px; top: 662.8091936486372px;"
      >
        72
      </div>
      <div
        class="number sky-blue"
        style="left: 848.025706439026px; top: 585.5157944112888px;"
      >
        73
      </div>
      <div
        class="number orange"
        style="left: 175.29751143405292px; top: 235.4263409565364px;"
      >
        74
      </div>
      <div
        class="number sky-blue"
        style="left: 930.7648338478323px; top: 703.1244405938605px;"
      >
        75
      </div>
      <div
        class="number orange"
        style="left: 332.9310681301954px; top: 671.0418314097461px;"
      >
        76
      </div>
      <div
        class="number sky-blue"
        style="left: 457.64084261605376px; top: 384.08711919870984px;"
      >
        77
      </div>
      <div
        class="number orange"
        style="left: 591.3903348224496px; top: 512.5586337154565px;"
      >
        78
      </div>
      <div
        class="number sky-blue"
        style="left: 481.68936439999266px; top: 200.36459640089632px;"
      >
        79
      </div>
      <div
        class="number orange"
        style="left: 424.83522457453637px; top: 126.77191294555716px;"
      >
        80
      </div>
      <div
        class="number sky-blue"
        style="left: 763.6924799113183px; top: 549.481006223284px;"
      >
        81
      </div>
      <div
        class="number orange"
        style="left: 377.92228534998344px; top: 685.1447121875989px;"
      >
        82
      </div>
      <div
        class="number sky-blue"
        style="left: 292.09460126573276px; top: 179.2534325689941px;"
      >
        83
      </div>
      <div
        class="number orange"
        style="left: 271.93984607334505px; top: 645.1406322985159px;"
      >
        84
      </div>
      <div
        class="number sky-blue"
        style="left: 234.18379497907927px; top: 591.2075802817826px;"
      >
        85
      </div>
      <div
        class="number orange"
        style="left: 576.9478005411299px; top: 510.88478713638784px;"
      >
        86
      </div>
      <div
        class="number sky-blue"
        style="left: 504.8254717370528px; top: 180.53333655140975px;"
      >
        87
      </div>
      <div
        class="number orange"
        style="left: 146.34245765373043px; top: 573.0839821604131px;"
      >
        88
      </div>
      <div
        class="number sky-blue"
        style="left: 563.0436308733747px; top: 588.0990806421926px;"
      >
        89
      </div>
      <div
        class="number orange"
        style="left: 560.2281239504168px; top: 255.41344292650416px;"
      >
        90
      </div>
      <div
        class="number sky-blue"
        style="left: 679.695485591443px; top: 101.24762089160973px;"
      >
        91
      </div>
      <div
        class="number orange"
        style="left: 41.27291380085558px; top: 411.06847128137986px;"
      >
        92
      </div>
      <div
        class="number sky-blue"
        style="left: 677.7800502269927px; top: 431.6374412745766px;"
      >
        93
      </div>
      <div
        class="number orange"
        style="left: 890.0349004596233px; top: 202.79363515183633px;"
      >
        94
      </div>
      <div
        class="number sky-blue"
        style="left: 614.3146346639787px; top: 572.0548028294111px;"
      >
        95
      </div>
      <div
        class="number orange"
        style="left: 228.05667715021264px; top: 362.78826515703395px;"
      >
        96
      </div>
      <div
        class="number sky-blue"
        style="left: 1004.0760139919255px; top: 510.7836163628882px;"
      >
        97
      </div>
      <div
        class="number orange"
        style="left: 150.77654410873015px; top: 135.4469116233397px;"
      >
        98
      </div>
      <div
        class="number sky-blue"
        style="left: 1021.1121789692097px; top: 670.4393329302438px;"
      >
        99
      </div>
      <div
        class="number orange"
        style="left: 820.6861394506257px; top: 499.8402795500924px;"
      >
        100
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tests for Navigation components Case 2: Calculator page snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Wrapper-cal"
      >
        <h1
          class="cal-title"
        >
          Calculator is Powerful Machine. Use Wisely!
        </h1>
        <div
          class="container"
        >
          <div
            class="input"
          >
            <input
              class="field"
              id="display"
              placeholder="0"
              readonly=""
              required=""
              type="text"
              value=""
            />
          </div>
          <div
            class="buttons"
          >
            <button
              class="tiles btn"
              type="button"
            >
              AC
            </button>
            <button
              class="tiles btn"
              type="button"
            >
              +/-
            </button>
            <button
              class="tiles btn"
              type="button"
            >
              %
            </button>
            <button
              class="tiles operations btn"
              type="button"
            >
              ÷
            </button>
            <button
              class="tiles btn"
              type="button"
            >
              7
            </button>
            <button
              class="tiles btn"
              type="button"
            >
              8
            </button>
            <button
              class="tiles btn"
              type="button"
            >
              9
            </button>
            <button
              class="tiles operations btn"
              type="button"
            >
              x
            </button>
            <button
              class="tiles btn"
              type="button"
            >
              4
            </button>
            <button
              class="tiles btn"
              type="button"
            >
              5
            </button>
            <button
              class="tiles btn"
              type="button"
            >
              6
            </button>
            <button
              class="tiles operations btn"
              type="button"
            >
              -
            </button>
            <button
              class="tiles btn"
              type="button"
            >
              1
            </button>
            <button
              class="tiles btn"
              type="button"
            >
              2
            </button>
            <button
              class="tiles btn"
              type="button"
            >
              3
            </button>
            <button
              class="tiles operations btn"
              type="button"
            >
              +
            </button>
            <button
              class="tiles btn"
              type="button"
            >
              0
            </button>
            <button
              class="tiles btn"
              type="button"
            >
              .
            </button>
            <button
              class="tiles operations btn"
              type="button"
            >
              =
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Wrapper-cal"
    >
      <h1
        class="cal-title"
      >
        Calculator is Powerful Machine. Use Wisely!
      </h1>
      <div
        class="container"
      >
        <div
          class="input"
        >
          <input
            class="field"
            id="display"
            placeholder="0"
            readonly=""
            required=""
            type="text"
            value=""
          />
        </div>
        <div
          class="buttons"
        >
          <button
            class="tiles btn"
            type="button"
          >
            AC
          </button>
          <button
            class="tiles btn"
            type="button"
          >
            +/-
          </button>
          <button
            class="tiles btn"
            type="button"
          >
            %
          </button>
          <button
            class="tiles operations btn"
            type="button"
          >
            ÷
          </button>
          <button
            class="tiles btn"
            type="button"
          >
            7
          </button>
          <button
            class="tiles btn"
            type="button"
          >
            8
          </button>
          <button
            class="tiles btn"
            type="button"
          >
            9
          </button>
          <button
            class="tiles operations btn"
            type="button"
          >
            x
          </button>
          <button
            class="tiles btn"
            type="button"
          >
            4
          </button>
          <button
            class="tiles btn"
            type="button"
          >
            5
          </button>
          <button
            class="tiles btn"
            type="button"
          >
            6
          </button>
          <button
            class="tiles operations btn"
            type="button"
          >
            -
          </button>
          <button
            class="tiles btn"
            type="button"
          >
            1
          </button>
          <button
            class="tiles btn"
            type="button"
          >
            2
          </button>
          <button
            class="tiles btn"
            type="button"
          >
            3
          </button>
          <button
            class="tiles operations btn"
            type="button"
          >
            +
          </button>
          <button
            class="tiles btn"
            type="button"
          >
            0
          </button>
          <button
            class="tiles btn"
            type="button"
          >
            .
          </button>
          <button
            class="tiles operations btn"
            type="button"
          >
            =
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tests for Navigation components Case 3: Quote page snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        Loading quote
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      Loading quote
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
